@@ -184,6 +184,10 @@ ei_circuit-board=Reflux circuit board
 ei_knowledge-tech=Knowledge
 ei_knowledge-tech-2=Condensed knowledge
 ei_knowledge-tech-3=Deep knowledge
+ei_metalworks_1=Metalworks 1
+ei_metalworks_2=Metalworks 2
+ei_metalworks_3=Metalworks 3
+ei_metalworks_4=Metalworks 4
 
 
 ei_dark-age-tech=Dark-age technology pack
@@ -227,6 +231,10 @@ ei_induction-matrix-superior-converter=Induction matrix superior converter
 ei_induction-matrix-basic-solenoid=Induction matrix solenoid
 ei_induction-matrix-advanced-solenoid=Induction matrix advanced solenoid
 
+ei_metalworks_1=Metalworks 1
+ei_metalworks_2=Metalworks 2
+ei_metalworks_3=Metalworks 3
+ei_metalworks_4=Metalworks 4
 ei_rocket-silo=Nauvisian rocket silo
 ei_holo-asteroid=Holographic asteroid
 ei_holo-black-hole=Holographic black hole
@@ -659,6 +667,11 @@ ei_bio_carbon-structure=Can not be researched by conventional means. Use the [co
 ei_bio_magnet=Can not be researched by conventional means. Use the [color=blue]knowledge console[/color][item=ei_knowledge-console] instead.
 
 [item-description]
+ei_metalworks_1=Process [color=orange]ingots[/color] fast and efficiently.
+ei_metalworks_2=Process [color=orange]ingots[/color] fast and efficiently.
+ei_metalworks_3=Process [color=orange]ingots[/color] fast and efficiently.
+ei_metalworks_4=Process [color=orange]ingots[/color] fast and efficiently.
+
 ei_insulated-pipe=The insulated pipe is a special type of pipe that can be used to transport [color=red]very hot (plasmas of gases)[/color] or [color=blue]cold fluids (liquid gases)[/color], that would otherwise damage the pipe.
 ei_insulated-underground-pipe=The insulated pipe is a special type of pipe that can be used to transport [color=red]very hot (plasmas of gases)[/color] or [color=blue]cold fluids (liquid gases)[/color], that would otherwise damage the pipe.
 ei_insulated-tank=The insulated tank is a special type of tank that can be used to store [color=red]very hot (plasmas of gases)[/color] or [color=blue]cold fluids (liquid gases)[/color], that would otherwise damage the tank.
@@ -838,7 +851,7 @@ ei_alien=Alien related
 ei_induction-matrix-tile=Induction matrix floor
 
 [exotic-industries]
-gate-not-enough-energy=[img=utility/warning_icon]Gate on surface [color=yellow]__1__[/color] at [gps=__2__,__3__] does not have enough energy to open.
+gate-not-enough-energy=[img=utility/warning_icon]Gate on surface [color=yellow]__3__[/color] at [gps=__1__,__2__] does not have enough energy to open.
 gate-exit-container-set=Gate exit set to [color=yellow]__1__[/color] at [gps=__2__,__3__]. Connected with [entity=__4__]container.
 gate-exit-set=Gate exit set to [color=yellow]__1__[/color] at [gps=__2__,__3__].
 building-degraded=[img=utility/warning_icon] [entity=__1__]Building degraded over time at [gps=__2__,__3__].
