@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.5
 Date: 14.01.2024
+  Features:
+    - added new 2x2 metalworks that can process ingots
   Changes:
     - buffed alien seed output
     - alien resin returns 6 resin per cycle
